# geometrix

./: .gitignore  LICENSE  README.md  embedding_mapping_paper.md  notes_embedding.md  pyproject.toml
examples/: 01_plane.ipynb  02_controls.py  03_tensor_ops.py  04_animation.py  05_points_cartesian.py  06_line_cylindrical.py  07_surface_sine_dsl.py  08_surface_sphere_spherical.py  09_surface_cube_cartesian.py  10_surface_latex_input.py  11_tensor_ops_complex.py  12_symbolic_pipeline.py  13_llm_assist.py  14_llm_assist2.py  llm_assist2.ipynb
js/: .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
js/src/: buffers.ts  index.ts  types.ts  viewer.test.ts  viewer.ts  widget.ts  widget_buffers.ts
js/src/geometry/: index.ts  line.ts  mesh.ts  points.ts  surface_grid.ts
js/src/utils/: colormap.ts
scripts/: build_js.py  package_colab_zip.py  set_version.py
src/geometrix/: __init__.py  animation.py  api.py  coords.py  magics.py
src/geometrix/ir/: __init__.py  model.py  tensors.py
src/geometrix/parse/: __init__.py  dsl_parser.py  latex_parser.py
src/geometrix/sample/: __init__.py  curves.py  domains.py  points.py  surface.py
src/geometrix/scene/: __init__.py  build.py  spec.py
src/geometrix/static/: index.iife.js  index.js
src/geometrix/symbolic/: __init__.py  compile.py  llm.py  llm_prompts.py  llm_validate.py  ops.py  solve.py
src/geometrix/transport/: __init__.py  buffers.py  html.py  html_ui.css  latex_viewer.py  widget.py
src/geometrix/transport/templates/: index.html
src/geometrix/transport/templates/scripts/: 00_base.js  10_renderer.js  20_gizmo.js  30_animation_ui.js
tests/: test_api.py  test_parser.py  test_sampling.py  test_scene.py  test_symbolic_pipeline.py  test_tensor_ops.py
